updates to the css and html elements ready for pres

--- a/index.html
+++ b/index.html
@@ -6,16 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
-  <title>Street View Rovigo</title>
+  <title>g and terminal's street view tour of rovigo</title>
 </head>
 
 <body>
-  <h1>Street View Tours</h1>
+  <h1>g and terminal's street view tour</h1>
+  <p> ¡this is still work in progress! </p>
 
-<!-- Ref quote -->
-    <div class="my-fun-class">
-      <p href="https://onezero.medium.com/party-in-a-shared-google-doc-d576c565706e">"The other day a friend and I took a Street View city break to Athens. Starting at the airport train station, we pretended to set our bags down in front of a Greek WHSmiths while we checked our guidebooks to plan a route into the city. Reenacting these intermediary moments, the ones that are slight and easily forgotten sometimes feel the most evocative."</p>
-    </div>
+<!-- screenshot of g and terminal's pres talk-->
+  <img src="assets/rovigo-g-terminal-pres.png"></img>
+
+<!-- What is a derive -->
+<div class="my-fun-class">
+    <p>The dérive (French: [de.ʁiv], "drift") is a revolutionary strategy originally
+      put forward in the "Theory of the Dérive" (1956) by Guy Debord, a member
+      at the time of the Letterist International. Debord defines the dérive
+      as "a mode of experimental behavior linked to the conditions of urban society:
+      a technique of rapid passage through varied ambiances." It is an unplanned
+      journey through a landscape, usually urban, in which participants drop their
+      everyday relations and "let themselves be drawn by the attractions of the
+      terrain and the encounters they find there". The dérive's goals include
+      studying the terrain of the city (psychogeography) and emotional disorientation,
+      both of which lead to the potential creation of Situations.</p>
+  </div>
 
 <!-- map of street view tour -->
     <img src="assets/rovigo-map-v2.png"></img>
@@ -31,12 +44,27 @@
       </video>
     </div>
 
+  <!-- Ref quote -->
+        <div class="my-fun-class">
+          <p href="https://onezero.medium.com/party-in-a-shared-google-doc-d576c565706e">
+            "The other day a friend and I took a Street View city break to Athens.
+            Starting at the airport train station, we pretended to set our bags down in front
+            of a Greek WHSmiths while we checked our guidebooks to plan a route into the city.
+            Reenacting these intermediary moments, the ones that are slight and easily forgotten
+            sometimes feel the most evocative." –From "Party in A Spreadsheet" by Marie Foulston
+          </p>
+        </div>
+
+    <p style="color:#d83516;"> ♡ Screenshot Postcards ♡ </p>
+<!-- screenshots from are.na -->
     <div id="orientation-blocks">
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
+
+    <p> ¡this is still work in progress! </p>
 
 </body>
 
